// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`webpackMerged CSS snapshots base: base-screen-css 1`] = `
"/*!****************************************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[4].use[1]!../../../node_modules/resolve-url-loader/index.js!../../../node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[4].use[3]!../../../node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[4].use[4]!./scss/screen.scss ***!
  \\****************************************************************************************************************************************************************************************************************************************************************************************************************/
:root {
  --color-primary: blue;
}

.button {
  display: flex;
  color: var(--color-primary);
}
.button--primary {
  color: red;
}

div {
  margin-left: 1rem;
}
"
`;

exports[`webpackMerged CSS snapshots postcss-preset-env: postcss-preset-env-screen-css 1`] = `
"/*!****************************************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[4].use[1]!../../../node_modules/resolve-url-loader/index.js!../../../node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[4].use[3]!../../../node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[4].use[4]!./scss/screen.scss ***!
  \\****************************************************************************************************************************************************************************************************************************************************************************************************************/
div {
  height: 25ch;
  padding-bottom: 1rem;
}
"
`;

exports[`webpackMerged CSS snapshots purgecss: purgecss-screen-css 1`] = `
"/*!****************************************************************************************************************************************************************************************************************************************************************************************************************!*\\
  !*** css ../../../node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[4].use[1]!../../../node_modules/resolve-url-loader/index.js!../../../node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[4].use[3]!../../../node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[4].use[4]!./scss/screen.scss ***!
  \\****************************************************************************************************************************************************************************************************************************************************************************************************************/
h2 {
  font-size: 2rem;
}

.purgecss-should-not-remove {
  background-color: red;
}
"
`;
